# inky-linux-spidev

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/hello-world/: CMakeLists.txt
examples/hello-world/src/: hello-world.c  hello-world.h
include/: inky-spidev.h
src/: inky-spidev.c
